--- a/style.css
+++ b/style.css
@@ -9,39 +9,93 @@ body {
     background-color: #f7f5f7;
     font-family: 'Lato', sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
 }
 
-canvas {
-    border: 2px solid orange;
+img {
+    max-width: 100%;
 }
 
-.toolbox {
-    background-color: orange;
-    border: 1.5px solid orange;
-    display: flex;
-    width: 603px;
-    padding: 1rem;
+.card {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    width: 350px;
 }
 
-.toolbox > * {
+.card-header {
+    height: 200px;
+}
+
+.card-header img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.card-content {
     background-color: white;
-    border: none;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
-    height: 50px;
-    width: 50px;
-    margin: 0.25rem;
-    padding: 0.25rem;
-    cursor: pointer;
+    padding: 30px;
 }
 
-.toolbox > *:last-child {
-    margin-left: auto;
+.card-title {
+    height: 20px;
+    margin: 0;
+}
+
+.card-excerpt {
+    color: #777;
+    margin: 10px 0 20px;
+}
+
+.author {
+    display: flex;
+}
+
+.profile-img {
+    border-radius: 50%;
+    overflow: hidden;
+    height: 40px;
+    width: 40px;
+}
+
+.author-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 10px;
+    width: 100px;
+}
+
+.author-info small {
+    color: #aaa;
+    margin-top: 5px;
+}
+
+.animated-bg {
+    background-image: linear-gradient(to right, #f6f7f8 0%,
+    #edeef1 10%,
+    #f6f7f8 20%,#f6f7f8 100%);
+    background-size: 200% 100%;
+    animation: bgPos 1s linear infinite;
+}
+
+.animated-bg-text {
+    border-radius: 50px;
+    display: inline-block;
+    margin: 0;
+    height: 10px;
+    width: 100%;
+}
+
+@keyframes bgPos {
+    0% {
+        background-position: 50% 0;
+    }
+    100% {
+        background-position: -150% 0;
+    }
 }
